--- a/css/style.css
+++ b/css/style.css
@@ -303,8 +303,7 @@
         
         .about .content .text {
             max-width: 45%;
-            max-height: 350px;
-            margin-top: 40px;
+            max-height: 300px;
             margin-left: 5px;
             font-family: 'ptsans-reg';
             font-size: 1rem;
@@ -318,6 +317,21 @@
             line-height: 22px;
             letter-spacing: 1px;
             transition: all linear .8s;
+        }
+        
+        .about .content .text .para {
+            padding-top: 20px;
+            font-size: 1.1rem;
+        }
+        
+        .about .content .text .para a {
+            display: inline-block;
+            color: tomato;
+        }
+        
+        .about .content .text .para a:hover {
+            color: red;
+            text-decoration-line: underline;
         }
         
         .about .content .link-icon {
@@ -351,6 +365,12 @@
             color: #fff;
         }
         
+        @media screen and (max-width:480px) {
+            .about .content .text p {
+                padding-right: 40px;
+            }
+        }
+        
         @media screen and (max-width:768px) {
             .about {
                 width: 100%;
@@ -371,7 +391,6 @@
                 justify-content: space-evenly;
                 align-items: center;
                 flex-direction: row;
-                margin-top: 40px;
                 border-radius: 5px 5px 0px 0px;
                 background: gainsboro;
                 max-width: 100%;
@@ -384,6 +403,13 @@
                 animation: none;
                 z-index: 1;
             }
+            @media screen and (max-width:280px) {
+                .about .content .link-icon {
+                    background-color: tomato;
+                    left: 50%;
+                    transform: translateX(-52%);
+                }
+            }
             .about .content .link-icon i {
                 text-align: right;
                 font-size: 1.2rem;
@@ -394,7 +420,7 @@
                 font-size: 1.2rem;
             }
             .about .content .text {
-                max-width: 90%;
+                max-width: 100%;
                 height: 200px;
                 margin-right: 0px;
                 padding-left: 0px;
@@ -438,6 +464,8 @@
             height: 100px;
             text-overflow: ellipsis;
             margin: 0 auto;
+            text-align: center;
+            line-height: 22px;
         }
         
         .portfolio .design {
@@ -494,7 +522,7 @@
         
         .portfolio .port-content .cont h4 {
             text-transform: capitalize;
-            color: rgb(104, 172, 155);
+            color: rgb(112, 190, 171);
             font-family: 'Times New Roman', Times, serif;
             font-weight: normal;
         }
@@ -504,7 +532,7 @@
         }
         
         .portfolio .port-content .cont:nth-child(3) a:hover {
-            color: rgb(104, 172, 155);
+            color: rgb(135, 207, 189);
         }
         
         .portfolio .port-content .cont:nth-child(2) a:hover {
@@ -515,9 +543,12 @@
             .portfolio {
                 max-height: 100%;
             }
+            .portfolio p {
+                padding: 0 10px;
+            }
         }
         
-        @media screen and (max-width:370px) {
+        @media screen and (max-width:480px) {
             .portfolio {
                 height: 450px;
             }
@@ -526,6 +557,24 @@
                 text-align: center;
                 font-family: 'ptsans-reg';
                 margin-top: 140px;
+            }
+            .portfolio p {
+                padding: 0 10px;
+            }
+        }
+        
+        @media screen and (max-width:280px) {
+            nav .logo {
+                font-size: 12px;
+            }
+            .about .content .text p {
+                font-size: .8rem;
+            }
+            .portfolio {
+                height: 500px;
+            }
+            .portfolio .port-content {
+                margin-top: 100px;
             }
         }
         /* portfolio ends */
@@ -610,6 +659,22 @@
                 margin: 0px;
             }
         }
+        
+        @media screen and (max-width:280px) {
+            .footer .box {
+                font-size: 12px;
+                text-align: center;
+            }
+            .footer .box:first-child h2 {
+                padding-left: 30px;
+            }
+            .footer .box:last-child {
+                border-left: 1px solid rgba(255, 255, 255, 0.5);
+                padding-left: 0px;
+                padding-right: 5px;
+                ;
+            }
+        }
         /* footer ends */
         /* top button */
         
@@ -622,6 +687,7 @@
             background: rgba(34, 139, 34, 0.699);
             border-radius: 50%;
             cursor: pointer;
+            z-index: 999;
         }
         
         .top i {
